[tool.poetry]
name = "bioseqdb-main"
version = "0.1.0"
description = "BioseqDB main project repo"
authors = ["Piotr Styczyński <piotr@styczynski.in>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
